# OOP_home_work

./: .coverage  16.1_main.py  16.2_main.py  17.1_main.py  README.md  main.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_main_py.html  z_145eef247bfb46b6_models_py.html
src/: models.py
tests/: conftest.py  test_models.py
