[tool.poetry]
name = "oop-home-work"
version = "0.1.0"
description = ""
authors = ["Kosarew Konstantin <kos26193@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pytest = "^8.4.1"
click = "==8.2.2"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.17.1"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
